--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="flex-container">
         <img class="logo" src="assets\images\logo.svg" alt="Logo peaks" title="Logo peaks"> 
 
-        <form class="connection-form" name="connection-form" action="" onsubmit="validations()" data-form-connection>
+        <form class="connection-form" name="connection-form" action="" data-form-connection>
 
           <!-- Snackbar -->
           <div class="snackbar" data-snack aria-hidden="true">
@@ -46,7 +46,7 @@
 
           <!-- login -->
           <label for="login">Login : <span class="pink-text">*</span></label>
-          <input class="input-text" type="email" id="login" name="login" placeholder="Email" required="">
+          <input class="input-text" type="text" id="login" name="login" placeholder="Email" required data-input-email>
 
           <!-- Password -->
           <label for="password">Mot de passe : <span class="pink-text">*</span></label>
@@ -59,7 +59,7 @@
 
           <div class="align-right">
             <a href="" class="link link--small lostpassword">Vous n'avez pas encore de compte ?</a>
-            <input type="submit" class="Button Button--pink pink-button" value="Connexion"  />
+            <button type="submit" class="Button Button--pink pink-button" data-connection-button>Connexion</button>
           </div>
 
         </form>
